--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,9 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-input[type="number"] {
+/* input[type="number"] {
   -moz-appearance: textfield;
-}
+} */
 button {
   min-height: 50px;
 }
